--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -1,10 +1,11 @@
 .AppStyle {
   display: grid;
   grid-template-rows: min-content min-content auto;
-  grid-template-areas:
-    "nova-tarefa"
-    "cronometro"
-    "tarefas";
+  grid-template-areas: 
+  "nova-tarefa"
+  "cronometro"
+  "tarefas"
+  ;
   row-gap: 24px;
   min-width: 320px;
   min-height: calc(100vh - 32px);
@@ -14,10 +15,11 @@
   border-radius: 10px;
   background-color: #171717;
 
-  @media screen and (min-width: 1280px) {
-    grid-template-areas:
-      "nova-tarefa tarefas"
-      "cronometro tarefas";
+  @media screen and (min-width:1280px)  {
+    grid-template-areas: 
+    "nova-tarefa tarefas"
+    "cronometro tarefas"
+    ;
     column-gap: 64px;
     grid-template-rows: min-content min-content;
     grid-template-columns: 750px 300px;
